apps/nextcloud/nextcloud/networkpolicies/egress-nextcloud-cron.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-nextcloud-cron
  namespace: nextcloud
spec:
  selector: job == 'nextcloud-cron'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'nextcloud'
        ports:
          - 80
