apps/nextcloud/nextcloud/networkpolicies/traefik-egress-nextcloud.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: traefik-egress-nextcloud
  namespace: traefik
spec:
  selector: app.kubernetes.io/instance == 'traefik'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'nextcloud'
        selector: app == 'nextcloud'
        ports:
          - 80
